changed build version to use java 1.8